--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: KJ's blog
-email: <redacted>@<redacted>.com
+title: KJ's notes
+email: 9kjkim@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Random thoughts.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
@@ -29,7 +29,7 @@ twitter_username: jekyllrb
 github_username: jekyll
 
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
 # Exclude from processing.
